--- a/www/index.html
+++ b/www/index.html
@@ -51,19 +51,18 @@
 				</div>
 			</ons-toolbar>
 
-			<ons-tabbar>
+			<ons-tabbar id="myTabbar">
 				<ons-tab page="html/reward.html" active="true" label="Completed">
-					<ons-icon icon="ion-star"></ons-icon>
-					<span style="font-size: 14px">RewardIcon</span>
+					<ons-icon size=" 30px" icon="ion-social-usd"></ons-icon>
+
 				</ons-tab>
 
-				<ons-tab page="html/camera.html">
-					<ons-icon icon="ion-gear-a"></ons-icon>
-					<span style="font-size: 14px">CameraIcon</span>
+				<ons-tab class="centralButton" page="html/camera.html">
+					<ons-icon size=" 34px" style="padding-top:10px;" icon="fa-camera"></ons-icon>
 				</ons-tab>
 				<ons-tab page="html/profile.html" label="Pending" active>
-					<ons-icon icon="ion-home"></ons-icon>
-					<span style="font-size: 14px">ProfileIcon</span>
+					<ons-icon size=" 30px" icon="ion-person"></ons-icon>
+
 				</ons-tab>
 
 			</ons-tabbar>
