--- a/www/html/reward.html
+++ b/www/html/reward.html
@@ -1,5 +1,23 @@
-<ons-page id="pendingTasksPage">
-	<ons-list id="pending-list">
-		Rewards
-	</ons-list>
+<ons-page id="reward">
+    <div id="mapid"></div>
+    <ons-list>
+        <ons-list-header>Local deals</ons-list-header>
+
+        <ons-list-item modifier="longdivider">
+            <div class="listItem">
+                <div class="leftReward">&nbsp;&nbsp; Trouser at Amazon</div>
+                <div class="rightReward">
+                    <div class="topDeal">5CHF</div>
+                    <div class="bottomDeal">8am - 12am</div>
+                </div>
+            </div>
+        </ons-list-item>
+
+        <ons-list-item modifier="longdivider">
+            <div class="listItem">
+                <div class="leftReward">&nbsp;&nbsp; T-shirt at Primark</div>
+                <div class="rightReward">5%</div>
+            </div>
+        </ons-list-item>
+    </ons-list>
 </ons-page>
