reward and profile screen

--- a/www/profile.html
+++ b/www/profile.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/profile.css"/>
 </head>
 <body>
-<div id="container">
+<div id="wrapper">
+    <h3>Shopping habbits</h3>
     <div class="spider" id="chart"></div>
 
     <div>
