--- a/www/rewards.html
+++ b/www/rewards.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <div id="wrapper">
+    <h1>Earned Coins</h1>
+    <img src="img/coin.png"  class="avatar">
     <h1>Reward Achievements</h1>
     <h3>Gift Card 10$</h3>
     <div class="meter">
