reward and profile screen

--- a/www/profile.html
+++ b/www/profile.html
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <td class="ranking"><i class="fa fa-arrow-up" aria-hidden="true"></td>
-                <td class="text-left">Brand 3</td>
+                <td class="text-left">Migros</td>
             </tr>
 
         </table>
