integrated profile and rewards page

--- a/www/html/profile.html
+++ b/www/html/profile.html
@@ -1,5 +1,31 @@
-<ons-page id="pendingTasksPage">
-	<ons-list id="pending-list">
-		Myprofile
-	</ons-list>
+<ons-page id="profile">
+
+	<div id="container">
+		<div class="spider" id="chart"></div>
+
+		<div>
+			<h3>Favourite Brands</h3>
+			<table class="table-fill">
+				<tr>
+
+					<td class="ranking"><i class="fa fa-arrow-up" aria-hidden="true"></i></td>
+					<td class="text-left">Marco Polo</td>
+				</tr>
+				<tr>
+					<td class="ranking"><i class="fa fa-arrow-up" aria-hidden="true"></td>
+					<td class="text-left">Nike</td>
+				</tr>
+				<tr>
+					<td class="ranking"><i class="fa fa-arrow-down" aria-hidden="true"></td>
+					<td class="text-left">Samsung</td>
+				</tr>
+				<tr>
+					<td class="ranking"><i class="fa fa-arrow-up" aria-hidden="true"></td>
+					<td class="text-left">Brand 3</td>
+				</tr>
+
+			</table>
+		</div>
+	</div>
+
 </ons-page>
