--- a/www/html/reward.html
+++ b/www/html/reward.html
@@ -1,23 +1,23 @@
+<link rel="stylesheet" href="css/rewards.css">
+
 <ons-page id="reward">
-    <div id="mapid"></div>
-    <ons-list>
-        <ons-list-header>Local deals</ons-list-header>
-
-        <ons-list-item modifier="longdivider">
-            <div class="listItem">
-                <div class="leftReward">&nbsp;&nbsp; Trouser at Amazon</div>
-                <div class="rightReward">
-                    <div class="topDeal">5CHF</div>
-                    <div class="bottomDeal">8am - 12am</div>
-                </div>
-            </div>
-        </ons-list-item>
-
-        <ons-list-item modifier="longdivider">
-            <div class="listItem">
-                <div class="leftReward">&nbsp;&nbsp; T-shirt at Primark</div>
-                <div class="rightReward">5%</div>
-            </div>
-        </ons-list-item>
-    </ons-list>
+    <div id="wrapper">
+        <h1>Reward Achievements</h1>
+        <h3>Gift Card 10$</h3>
+        <div class="meter">
+            <span style="width: 95%"></span>
+        </div>
+        <h3>Free Coffee at Starbucks</h3>
+        <div class="meter">
+            <span style="width: 75%"></span>
+        </div>
+        <h3>Gift Cards 20$</h3>
+        <div class="meter">
+            <span style="width: 65%"></span>
+        </div>
+        <h3>Gift Cards 30$</h3>
+        <div class="meter">
+            <span style="width: 35%"></span>
+        </div>
+    </div>
 </ons-page>
