reward page animation

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,9 @@
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/leaflet.js"></script>
+    <script src="js/divsugar.js"></script>
+    <script src="js/reward_animation.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
     <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
     <link rel="stylesheet" href="style.css">
@@ -61,10 +64,10 @@
 
         <ons-tabbar id="myTabbar">
             <ons-tab page="html/deals.html" active="true" active>
-            <ons-icon size=" 30px" icon="ion-ios-pricetags"></ons-icon>
-        </ons-tab>
+                <ons-icon size=" 30px" icon="ion-ios-pricetags"></ons-icon>
+            </ons-tab>
 
-            <ons-tab page="html/reward.html" active="true" >
+            <ons-tab page="html/reward.html" active="true">
                 <ons-icon size=" 30px" icon="ion-social-usd"></ons-icon>
             </ons-tab>
 
