--- a/www/html/camera.html
+++ b/www/html/camera.html
@@ -2,5 +2,6 @@
 	<ons-list id="pending-list">
 		<div id="beforeCoins">THIS WILL BE SHOWN ALWAYS THE CAMERA</div>
 		<div id="coins">THIS WILL BE SHOWN AFTER THE CAMERA</div>
+		<div id="win"></div>
 	</ons-list>
 </ons-page>
