removed coins animation

--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,7 @@
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/leaflet.js"></script>
-    <script src="js/divsugar.js"></script>
-    <script src="js/reward_animation.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
     <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
@@ -22,6 +21,8 @@
     <script src="js/spiderChart.js"></script>
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/profile.css"/>
+
+    <!--INSERT ANIMATION JS TRI-->
     <style>
         @import url('RobotoCondensed-Regular.ttf');
         @import url('RobotoCondensed-Bold.ttf');
@@ -67,7 +68,7 @@
                 <ons-icon size=" 30px" icon="ion-ios-pricetags"></ons-icon>
             </ons-tab>
 
-            <ons-tab page="html/reward.html" active="true">
+            <ons-tab page="html/reward.html">
                 <ons-icon size=" 30px" icon="ion-social-usd"></ons-icon>
             </ons-tab>
 
