--- a/www/html/reward.html
+++ b/www/html/reward.html
@@ -1,8 +1,13 @@
 <link rel="stylesheet" href="css/rewards.css">
 
 <ons-page id="reward">
-    <div id="wrapper"><h1>Earned Coins</h1>
-        <img src="img/coin.png" class="avatar">
+    <div id="wrapper">
+        <h1>Earned Coins</h1>
+        <div class="containerBox">
+            <div class="circle"><span>200</span></div>
+            <img src="img/coin.png">
+        </div>
+
         <h1>Reward Achievements</h1>
         <h3>Gift Card 10$</h3>
         <div class="meter">
