--- a/www/html/reward.html
+++ b/www/html/reward.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="css/rewards.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 <ons-page id="reward">
     <div id="wrapper">
@@ -9,20 +10,19 @@
         </div>
 
         <h1>Reward Achievements</h1>
+        <h3>Free Coffee at Starbucks</h3>
+        <div class="meter full">
+            <span style="width: 100%"><span></span></span>
+        </div>
         <h3>Gift Card 10$</h3>
         <div class="meter">
-            <span style="width: 95%"></span>
+            <span style="width: 80%"></span>
         </div>
-
-        <h3>Free Coffee at Starbucks</h3>
-        <div class="meter">
-            <span style="width: 75%"></span>
-        </div>
-        <h3>Gift Cards 20$</h3>
+        <h3>Gift Card 20$</h3>
         <div class="meter">
             <span style="width: 65%"></span>
         </div>
-        <h3>Gift Cards 30$</h3>
+        <h3>Gift Card 30$</h3>
         <div class="meter">
             <span style="width: 35%"></span>
         </div>
