Finished styling home page

--- a/www/html/deals.html
+++ b/www/html/deals.html
@@ -5,18 +5,61 @@
 
         <ons-list-item modifier="longdivider">
             <div class="listItem">
-                <div class="leftReward">&nbsp;&nbsp; Trouser at Amazon</div>
+                <div class="leftReward">&nbsp;&nbsp; On any Prada Shirt</div>
                 <div class="rightReward">
-                    <div class="topDeal">5CHF</div>
+                    <div class="topDeal">2% OFF</div>
                     <div class="bottomDeal">8am - 12am</div>
                 </div>
             </div>
         </ons-list-item>
 
         <ons-list-item modifier="longdivider">
+            <div class="listItem" style="background-color: #f1f9ff">
+                <div class="leftReward">&nbsp;&nbsp;Just Cavalli: Buy two ties pay one</div>
+                <div class="rightReward">
+                    <div class="topDeal">Free</div>
+                    <div class="bottomDeal">From 2PM</div>
+                </div>
+            </div>
+        </ons-list-item>
+
+        <ons-list-item modifier="longdivider">
             <div class="listItem">
-                <div class="leftReward">&nbsp;&nbsp; T-shirt at Primark</div>
-                <div class="rightReward">5%</div>
+                <div class="leftReward">&nbsp;&nbsp;Micheal Kors Backpack</div>
+                <div class="rightReward">
+                    <div class="topDeal">5%</div>
+                    <div class="bottomDeal">10am - 2pm</div>
+                </div>
+            </div>
+        </ons-list-item>
+
+        <ons-list-item modifier="longdivider">
+            <div class="listItem" style="background-color: #f1f9ff">
+                <div class="leftReward">&nbsp;&nbsp;On Lacoste Polo Shirt</div>
+                <div class="rightReward">
+                    <div class="topDeal">10%</div>
+                    <div class="bottomDeal">All day</div>
+                </div>
+            </div>
+        </ons-list-item>
+
+        <ons-list-item modifier="longdivider">
+            <div class="listItem">
+                <div class="leftReward">&nbsp;&nbsp;Free tie with any Shirt</div>
+                <div class="rightReward">
+                    <div class="topDeal">FREE</div>
+                    <div class="bottomDeal">11am - 1pm</div>
+                </div>
+            </div>
+        </ons-list-item>
+
+        <ons-list-item modifier="longdivider">
+            <div class="listItem" style="background-color: #f1f9ff">
+                <div class="leftReward">&nbsp;&nbsp;Free slice of cake at Starbucks</div>
+                <div class="rightReward">
+                    <div class="topDeal">FREE</div>
+                    <div class="bottomDeal">12am - 1pm</div>
+                </div>
             </div>
         </ons-list-item>
     </ons-list>
