--- a/www/html/deals.html
+++ b/www/html/deals.html
@@ -44,7 +44,7 @@
         </ons-list-item>
 
         <ons-list-item modifier="longdivider">
-            <div class="listItem">
+            <div id="secret" class="listItem">
                 <div class="leftReward">&nbsp;&nbsp;Free tie with any Shirt</div>
                 <div class="rightReward">
                     <div class="topDeal">FREE</div>
@@ -63,4 +63,7 @@
             </div>
         </ons-list-item>
     </ons-list>
+    <ons-modal id="modal">
+        Modal content
+    </ons-modal>
 </ons-page>
