--- a/www/html/profile.html
+++ b/www/html/profile.html
@@ -1,6 +1,7 @@
 <ons-page id="profile">
 
 	<div id="container">
+		<h3>Shopping habbits</h3>
 		<div class="spider" id="chart"></div>
 
 		<div>
@@ -21,7 +22,7 @@
 				</tr>
 				<tr>
 					<td class="ranking"><i class="fa fa-arrow-up" aria-hidden="true"></td>
-					<td class="text-left">Brand 3</td>
+					<td class="text-left">Migros</td>
 				</tr>
 
 			</table>
