--- a/www/html/deals.html
+++ b/www/html/deals.html
@@ -1,6 +1,6 @@
 <ons-page id="deals">
     <div id="mapid"></div>
-    <ons-list>
+    <ons-list class="animated slideInUp">
         <ons-list-header>Local deals</ons-list-header>
 
         <ons-list-item modifier="longdivider">
