--- a/www/html/profile.html
+++ b/www/html/profile.html
@@ -2,7 +2,7 @@
 
 	<div id="container">
 		<h3>Shopping habbits</h3>
-		<div class="spider" id="chart"></div>
+		<div class="spider animated zoomIn" id="chart"></div>
 
 		<div>
 			<h3>Favourite Brands</h3>
