--- a/www/html/reward.html
+++ b/www/html/reward.html
@@ -4,7 +4,7 @@
 <ons-page id="reward">
     <div id="wrapper">
         <h2>Earned Coins</h2>
-        <div class="containerBox">
+        <div class="containerBox animated bounceIn">
             <div class="circle"><span>200</span></div>
             <img src="img/coin.png">
         </div>
