--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,8 @@
     <script src="js/controllers.js"></script>
     <script src="js/leaflet.js"></script>
 
+    <link rel="stylesheet" href="./css/animate.min.css">
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
     <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
