--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,10 @@
             <ons-tab pageid="camera" page="html/camera.html">
                 <ons-icon size=" 28px" style="padding-top:10px;" icon="fa-camera"></ons-icon>
             </ons-tab>
+
+            <ons-tab page="html/shop.html"id="tabShop" style="display: none" hidden="true">
+                <ons-icon icon="ion-map" class="tab-icon"></ons-icon>
+            </ons-tab>
         </ons-tabbar>
 
 
