--- a/www/html/deals.html
+++ b/www/html/deals.html
@@ -4,10 +4,10 @@
         <ons-list-header>Local deals</ons-list-header>
 
         <ons-list-item modifier="longdivider">
-            <div class="listItem">
+            <div onclick="$('#tabShop').click()" id="shopDeal" class="listItem">
                 <div class="leftReward">&nbsp;&nbsp; On any Prada Shirt</div>
                 <div class="rightReward">
-                    <div class="topDeal">2% OFF</div>
+                    <div class="topDeal">5% OFF</div>
                     <div class="bottomDeal">8am - 12am</div>
                 </div>
             </div>
