Some style fixes

--- a/www/html/profile.html
+++ b/www/html/profile.html
@@ -1,11 +1,11 @@
 <ons-page id="profile">
 
 	<div id="container">
-		<h3>Shopping habbits</h3>
+		<ons-list-header>Shopping habits</ons-list-header>
 		<div class="spider animated zoomIn" id="chart"></div>
 
 		<div>
-			<h3>Favourite Brands</h3>
+			<ons-list-header>Favourite Brands</ons-list-header>
 			<table class="table-fill">
 				<tr>
 
