--- a/www/html/reward.html
+++ b/www/html/reward.html
@@ -3,13 +3,14 @@
 
 <ons-page id="reward">
     <div id="wrapper">
-        <h2>Earned Coins</h2>
+        <ons-list-header>Earned coins</ons-list-header>
         <div class="containerBox animated bounceIn">
             <div class="circle"><span>200</span></div>
             <img src="img/coin.png">
         </div>
+        <br>
 
-        <h2>Reward Achievements</h2>
+        <ons-list-header>Reward Achievements</ons-list-header>
         <h3>Free Coffee at Starbucks</h3>
         <div class="meter full">
             <span style="width: 100%"><span></span></span>
