--- a/www/html/camera.html
+++ b/www/html/camera.html
@@ -1,7 +1,8 @@
 <ons-page id="camera">
 	<ons-list id="pending-list">
-		<div id="beforeCoins">THIS WILL BE SHOWN ALWAYS THE CAMERA</div>
-		<div id="coins">THIS WILL BE SHOWN AFTER THE CAMERA</div>
+
+		<div id="share">SHARE THIS</div>
+
 		<div id="win"></div>
 	</ons-list>
 </ons-page>
