--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/leaflet.js"></script>
-
+    <script type="text/javascript" src="js/SocialSharing.js"></script>
     <link rel="stylesheet" href="./css/animate.min.css">
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
