manual responsive design for the spider chart

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 
-<body>
+<body onresize="draw_spider_chart()">
 
 <!-- First navigation component: Navigator. This will remain always on top of the app. -->
 <ons-navigator id="myNavigator" page="splitter.html">
