--- a/www/html/profile.html
+++ b/www/html/profile.html
@@ -8,25 +8,25 @@
             <ons-list-header>Favourite Brands</ons-list-header>
             <ons-list-item modifier="longdivider">
                 <div class="brandItem" style="background-color: #f1f9ff">
-                    <div class="indicator"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>
+                    <div class="indicator"><i class="fa fa-arrow-up" aria-hidden="true" style="color:green"></i></div>
                     <div class="brand">Marco Polo</div>
                 </div>
             </ons-list-item>
             <ons-list-item modifier="longdivider">
                 <div class="brandItem" >
-                    <div class="indicator"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>
+                    <div class="indicator"><i class="fa fa-arrow-up" aria-hidden="true" style="color:green"></i></div>
                     <div class="brand">Nike</div>
                 </div>
             </ons-list-item>
             <ons-list-item modifier="longdivider">
                 <div class="brandItem"  style="background-color: #f1f9ff">
-                    <div class="indicator"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
+                    <div class="indicator"><i class="fa fa-arrow-down" aria-hidden="true" style="color:orange"></i></div>
                     <div class="brand">Samsung</div>
                 </div>
             </ons-list-item>
             <ons-list-item modifier="longdivider">
                 <div class="brandItem" >
-                    <div class="indicator"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>
+                    <div class="indicator"><i class="fa fa-arrow-up" aria-hidden="true" style="color:green"></i></div>
                     <div class="brand">Migros</div>
                 </div>
             </ons-list-item>
