--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,7 @@
                     <ons-icon icon="ion-navicon, material:md-search" size="32px, material:24px"></ons-icon>
                 </ons-toolbar-button>
             </div>
-            <div class="center">Rewardo</div>
+            <div class="center"><img style="max-height: 30px;margin: auto;margin-top: 10px;top: 10px;" src="images/rewardo.png"></div>
             <div class="right">
 
                 <ons-if platform="ios android">
