--- a/www/html/camera.html
+++ b/www/html/camera.html
@@ -1,7 +1,30 @@
+<link rel="stylesheet" href="css/camera.css">
 <ons-page id="camera">
 	<ons-list id="pending-list">
 
-		<div id="share">SHARE THIS</div>
+		<div id="">
+			<div id="product">
+				<div id="blouse">
+					<img src="img/blouse.jpeg" width="150" height="200">
+				</div>
+				<div id="description">
+					<p>Double layered woolen blouse</p>
+					<p>CHF 179.00</p>
+					<div id="sharing_buttons">
+						<a style="text-decoration: none; color: #3b5998"  href="#" onclick="window.plugins.socialsharing.shareViaFacebook('Message via Facebook', null /* img */, 'http://www2.hm.com/de_ch/productpage.0472017001.html#Schwarz', function() {console.log('share ok')}, function(errormsg){alert(errormsg)})">
+							<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+						</a>
+						<a style="text-decoration: none; color: #0084b4" href="#" onclick="window.plugins.socialsharing.shareViaTwitter('#SIXhackathon #@SIXGroup #fintech2017 #rewardo', null /* img */, 'http://www2.hm.com/de_ch/productpage.0472017001.html#Schwarz')">
+							<i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+						</a>
+						<i style="color: #35465c;" class="fa fa-tumblr-square fa-2x" aria-hidden="true"></i>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+
 
 		<div id="win"></div>
 	</ons-list>
