--- a/www/html/reward.html
+++ b/www/html/reward.html
@@ -10,7 +10,7 @@
         </div>
         <br>
 
-        <ons-list-header>Reward Achievements</ons-list-header>
+        <ons-list-header>Reward achievements</ons-list-header>
         <h3>Free Coffee at Starbucks</h3>
         <div class="meter full">
             <span style="width: 100%"><span></span></span>
