--- a/www/html/profile.html
+++ b/www/html/profile.html
@@ -5,7 +5,7 @@
         <div class="spider animated zoomIn" id="chart"></div>
 
         <ons-list>
-            <ons-list-header>Favourite Brands</ons-list-header>
+            <ons-list-header>Your trending brands</ons-list-header>
             <ons-list-item modifier="longdivider">
                 <div class="brandItem" style="background-color: #f1f9ff">
                     <div class="indicator"><i class="fa fa-arrow-up" aria-hidden="true" style="color:green"></i></div>
