someone broke the styling :(

--- a/www/html/reward.html
+++ b/www/html/reward.html
@@ -1,4 +1,4 @@
-cc
+<link rel="stylesheet" href="css/rewards.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 <ons-page id="reward">
