Camera synchronous with animation

--- a/www/html/camera.html
+++ b/www/html/camera.html
@@ -2,7 +2,7 @@
 <ons-page id="camera">
 	<ons-list id="pending-list">
 
-		<div id="">
+		<div id="outfit">
 			<div id="product">
 				<div id="blouse">
 					<img src="img/blouse.jpeg" width="150" height="200">
