--- a/www/html/deals.html
+++ b/www/html/deals.html
@@ -14,10 +14,10 @@
         </ons-list-item>
 
         <ons-list-item modifier="longdivider">
-            <div class="listItem" style="background-color: #f1f9ff">
+            <div class="listItem" style="background-color: #f1f9ff;">
                 <div class="leftReward">&nbsp;&nbsp;Just Cavalli: Buy two ties pay one</div>
                 <div class="rightReward">
-                    <div class="topDeal">Free</div>
+                    <div class="topDeal">FREE</div>
                     <div class="bottomDeal">From 2PM</div>
                 </div>
             </div>
