--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,13 @@
     </div>
 </ons-modal>
 
+<ons-modal id="modal2">
+    <div id="rewardSecret2">
+        Congratulation!<br>
+     You just won a FREE coffee at Starbucks
+        <img src="img/coin-flip.gif">
+    </div>
+</ons-modal>
 <ons-template id="tabbar.html">
     <ons-page id="tabbarPage">
         <ons-toolbar>
