someone broke the styling :(

--- a/www/html/camera.html
+++ b/www/html/camera.html
@@ -17,7 +17,7 @@
 						}, function(errormsg){alert(errormsg)})">
                             <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
                         </a>
-                        <a style="text-decoration: none; color: #0084b4" href="#" onclick="window.plugins.socialsharing.shareViaTwitter('#SIXhackathon #SIXGroup #fintech2017 #rewardo', null /* img */, 'http://www2.hm.com/de_ch/productpage.0472017001.html#Schwarz',successShare,successShare);">
+                        <a style="text-decoration: none; color: #0084b4" href="#" onclick="window.plugins.socialsharing.shareViaTwitter('Live from the launch of #rewardo customer loyalty app #SIXHackathon #SIXGroup', null /* img */, 'http://www2.hm.com/de_ch/productpage.0472017001.html#Schwarz',successShare,successShare);">
                         <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
                         </a>
                         <i style="color: #35465c;" class="fa fa-tumblr-square fa-2x" aria-hidden="true"></i>
