New Icons and improved flow

--- a/www/html/camera.html
+++ b/www/html/camera.html
@@ -5,11 +5,11 @@
         <div id="outfit">
             <div id="product">
                 <div id="blouse">
-                    <img src="img/blouse.jpeg" width="150" height="200">
+                    <img src="img/blouse.jpeg" width="150" height="180">
                 </div>
                 <div id="description">
-                    <p>Double layered woolen blouse</p>
-                    <p>CHF 179.00</p>
+                    <p>Congratulation for your purchase! <br>
+                        Double layered woolen blouse</p>
                     <div id="sharing_buttons">
                         <a style="text-decoration: none; color: #3b5998" href="#" onclick="window.plugins.socialsharing.shareViaFacebook('Message via Facebook', null /* img */, 'http://www2.hm.com/de_ch/productpage.0472017001.html#Schwarz', function() {
 
@@ -21,6 +21,7 @@
                         <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
                         </a>
                         <i style="color: #35465c;" class="fa fa-tumblr-square fa-2x" aria-hidden="true"></i>
+                        <p>Share with your friends to get more rewards!</p>
                     </div>
                 </div>
             </div>
