--- a/www/index.html
+++ b/www/index.html
@@ -84,16 +84,16 @@
         </ons-toolbar>
 
         <ons-tabbar id="myTabbar">
-            <ons-tab page="html/deals.html" active="true" active>
+            <ons-tab page="html/deals.html" >
                 <ons-icon size=" 30px" icon="ion-ios-pricetags"></ons-icon>
             </ons-tab>
 
-            <ons-tab page="html/reward.html">
+            <ons-tab id="rewardPage" page="html/reward.html">
                 <ons-icon size=" 30px" icon="ion-social-usd"></ons-icon>
             </ons-tab>
 
 
-            <ons-tab page="html/profile.html" label="Pending">
+            <ons-tab page="html/profile.html" active="true" active >
                 <ons-icon size=" 30px" icon="ion-person"></ons-icon>
             </ons-tab>
 
@@ -104,6 +104,8 @@
             <ons-tab page="html/shop.html"id="tabShop" style="display: none" hidden="true">
                 <ons-icon icon="ion-map" class="tab-icon"></ons-icon>
             </ons-tab>
+
+
         </ons-tabbar>
 
 
